# station-meteo

./: .gitignore  README.md
BLEProject/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SensorDemo_BLE_l476rg/: .mxproject  SensorDemo_BLE_l476rg.ioc
SensorDemo_BLE_l476rg/Inc/: app_bluenrg_2.h  ble_list_utils.h  bluenrg_conf.h  gatt_db.h  hci_tl_interface.h
SensorDemo_BLE_l476rg/STM32CubeIDE/: .cproject
SensorDemo_BLE_l476rg/STM32CubeIDE/Application/User/: sensor_platform.c
SensorDemo_BLE_l476rg/STM32CubeIDE/Debug/: SensorDemo_BLE_l476rg.elf  SensorDemo_BLE_l476rg.list  SensorDemo_BLE_l476rg.map  makefile  objects.list  sources.mk
SensorDemo_BLE_l476rg/STM32CubeIDE/Debug/Application/Startup/: subdir.mk
SensorDemo_BLE_l476rg/STM32CubeIDE/Debug/Application/User/: app_bluenrg_2.cyclo  app_bluenrg_2.d  app_bluenrg_2.su  bsp.d  gatt_db.cyclo  gatt_db.d  gatt_db.su  gpio.cyclo  gpio.d  gpio.su  hci_tl_interface.cyclo  hci_tl_interface.d  hci_tl_interface.su  i2c.cyclo  i2c.d  i2c.su  main.cyclo  main.d  main.su  sensor.cyclo  sensor.d  sensor.su  sensor_platform.cyclo  sensor_platform.d  sensor_platform.su  stm32l4xx_hal_msp.cyclo  stm32l4xx_hal_msp.d  stm32l4xx_hal_msp.su  stm32l4xx_it.cyclo  stm32l4xx_it.d  stm32l4xx_it.su  stm32l4xx_nucleo_bus.cyclo  stm32l4xx_nucleo_bus.d  stm32l4xx_nucleo_bus.su  subdir.mk
SensorDemo_BLE_l476rg/STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  (+3 more)
SensorDemo_BLE_l476rg/STM32CubeIDE/Drivers/user/: sensor_platform.h
SensorDemo_BLE_l476rg/Src/: app_bluenrg_2.c  gatt_db.c  hci_tl_interface.c  main.c  sensor.c
(+98 files in other folders)
